--- a/gradle.properties
+++ b/gradle.properties
@@ -11,6 +11,7 @@ modGen = exogenesis.gen
 # The mod's JAR file name. Desktop build is suffixed with `Desktop`.
 modArtifact = ExogenesisMod
 
+
 # EntityAnno version, for integrating syntax-downgrader and entity annotation processor.
 # The exact version you need should be looked up on the project's `README.md`
 # (see https://github.com/GlennFolker/EntityAnno?tab=readme-ov-file#version-compatibility).
@@ -26,6 +27,8 @@ mindustryVersion = v146
 mindustryBEVersion =
 # Arc version, should either follow `mindustryVersion` for release or whatever hash bleeding-edge Mindustry uses.
 arcVersion = v146
+# My black holes library. Just use the latest release.
+bhLibraryVersion = 16
 
 ##### Android SDK configuration for building Android artifacts.
 # Android platform SDK version.
