--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -13,29 +13,18 @@ unit.exogenesis-.description =
 unit.exogenesis-.details =
 
 ##Erekir units
-unit.exogenesis-prometheus.name = [#ffb98b]T1-RF Prometheus[]
+unit.exogenesis-prometheus.name = [#ffb98b]T1-R.F Prometheus[]
 unit.exogenesis-prometheus.description = The [#ffb98b]Rolling Fortress Titan[]. The [#ffb98b]T1-RF Prometheus[] is a heavy duty siege unit with thick armoring and high health. Sporting a quad barrel main cannon and  armed with four mounted artillery cannon.
 unit.exogenesis-prometheus.details = One of the first of the erekir titans developed by [#9681fb]Malis[] in response to something being discovered on Erekir.
-unit.exogenesis-atlas.name = [#aec6ff]T3-ED Atlas[]
-unit.exogenesis-atlas.description = The [#aec6ff]Energy Devastation Titan[]. The [#aec6ff]T3-ED Atlas[] fires homing projectiles, along with heavy energy rounds, buts main power lies in its dense energy core, which it can fire towards distant targets dealing extensive damage to buildings, zaps surrounding power structures and units.
-unit.exogenesis-atlas.details = [#9681fb]Malis[] is technology has certainly come far with the development of the [#aec6ff]Atlas[] titan, the technology it uses to generate its devastating core energy attack seems suspiciously advanced for what [#9681fb]Malis[] has been capable of before.
-unit.exogenesis-nemesis.name = [#bf92f9]T2-SS Nemesis[]
+
+unit.exogenesis-nemesis.name = [#bf92f9]T2-S.S Nemesis[]
 unit.exogenesis-nemesis.description = The [#bf92f9]Suppression Support Titan[]. The [#bf92f9]T2-SS Nemesis[] is armed with four frontal cannons which fire helix rounds. Fires two large thorium missiles at enemies and structures and posses the ability to suppress nearby regeneration structures and damages units within a certain radius around it and debuffs them nearby units.
 unit.exogenesis-nemesis.details = The [#bf92f9]Nemesis[] is a frightening weapon, built with the sole purpose of suppressing enemy firepower and crippling forces within its specialized field, these units tho where often detect far away from any known [#9681fb]Malis[] bases in remote locations seemingly searching for something... But what?.
 
-unit.exogenesis-calm.name = Calm
-unit.exogenesis-calm.description = A small support unit. Fires a cluster of healing bullets, can repair nearby allies.
-unit.exogenesis-serene.name = Serene
-unit.exogenesis-serene.description = Fires three bullets cable of piercing and healing, at rapid pace, they also deal extra damage to structure. Heals nearby allies.
-unit.exogenesis-tranquil.name = Tranguil
-unit.exogenesis-tranquil.description = Fires arcs at nearby enemies. wield a large cubic force fields capable of protecting multiple allies.
-unit.exogenesis-sanctuary.name = Sanctuary
-unit.exogenesis-sanctuary.description =  Fires three energy orbs in cone. Capable of buffing nearby allies and healing them.
-unit.exogenesis-ataraxia.name = Ataraxia
-unit.exogenesis-ataraxia.description = Fires energy lasers capable of piercing through three walls. Has four mounted guns.
-unit.exogenesis-leto.name = [#63edf8]T6-AA Leto[]
-unit.exogenesis-leto.description = THe [#63edf8]Auxiliary Assault Titan[]. The [#63edf8]T6-AA Leto[] is heavily armorer mech equipped with main gunn which fire traveling energy beams dealing continuous damage to what ever is in their path, it is also equipped with four AA guns over top which deal piercing damage, they can fire at strcture but deal far less damage to them. The Titan is also cable of buffing nearby allies increasing team damage. It repairs nearby allies and recovers unit shields.
-unit.exogenesis-leto.details =
+
+unit.exogenesis-atlas.name = [#aec6ff]T3-G.P Atlas[]
+unit.exogenesis-atlas.description = The [#aec6ff]Energy Devastation Titan[]. The [#aec6ff]T3-ED Atlas[] fires homing projectiles, along with heavy energy rounds, buts main power lies in its dense energy core, which it can fire towards distant targets dealing extensive damage to buildings, zaps surrounding power structures and units.
+unit.exogenesis-atlas.details = [#9681fb]Malis[] is technology has certainly come far with the development of the [#aec6ff]Atlas[] titan, the technology it uses to generate its devastating core energy attack seems suspiciously advanced for what [#9681fb]Malis[] has been capable of before.
 
 unit.exogenesis-ivy.name = Ivy
 unit.exogenesis-ivy.description =
@@ -47,7 +36,7 @@ unit.exogenesis-kalmia.name = Kalmia
 unit.exogenesis-kalmia.description =
 unit.exogenesis-hemlock.name = Hemlock
 unit.exogenesis-hemlock.description =
-unit.exogenesis-rhea.name = [#d370d3]T4-AG Rhea[]
+unit.exogenesis-rhea.name = [#d370d3]T4-A.G Rhea[]
 unit.exogenesis-rhea.description = Auxiliary Guardian
 unit.exogenesis-rhea.details =
 
@@ -61,21 +50,35 @@ unit.exogenesis-thunderstorm.name = Thunderstorm
 unit.exogenesis-thunderstorm.description =
 unit.exogenesis-hurricane.name = Hurricane
 unit.exogenesis-hurricane.description =
-unit.exogenesis-hyperion.name = T5-TC Zeus
+unit.exogenesis-hyperion.name = [#ffbe5d]T5-T.C Zeus[]
 unit.exogenesis-hyperion.description = Titan Counter
 unit.exogenesis-hyperion.details =
 
-unit.exogenesis-bane.name = Bane
-unit.exogenesis-bane.description =
-unit.exogenesis-blight.name = Blight
-unit.exogenesis-blight.description =
+unit.exogenesis-calm.name = Calm
+unit.exogenesis-calm.description = A small support unit. Fires a cluster of healing bullets, can repair nearby allies.
+unit.exogenesis-serene.name = Serene
+unit.exogenesis-serene.description = Fires three bullets cable of piercing and healing, at rapid pace, they also deal extra damage to structure. Heals nearby allies.
+unit.exogenesis-tranquil.name = Tranguil
+unit.exogenesis-tranquil.description = Fires arcs at nearby enemies. wield a large cubic force fields capable of protecting multiple allies.
+unit.exogenesis-sanctuary.name = Sanctuary
+unit.exogenesis-sanctuary.description =  Fires three energy orbs in cone. Capable of buffing nearby allies and healing them.
+unit.exogenesis-ataraxia.name = Ataraxia
+unit.exogenesis-ataraxia.description = Fires energy lasers capable of piercing through three walls. Has four mounted guns.
+unit.exogenesis-leto.name = [#63edf8]T6-A.A Leto[]
+unit.exogenesis-leto.description = THe [#63edf8]Auxiliary Assault Titan[]. The [#63edf8]T6-AA Leto[] is heavily armorer mech equipped with main gunn which fire traveling energy beams dealing continuous damage to what ever is in their path, it is also equipped with four AA guns over top which deal piercing damage, they can fire at strcture but deal far less damage to them. The Titan is also cable of buffing nearby allies increasing team damage. It repairs nearby allies and recovers unit shields.
+unit.exogenesis-leto.details =
+
+unit.exogenesis-hive.name = Hive
+unit.exogenesis-hive.description =
+unit.exogenesis-fester.name = Fester
+unit.exogenesis-fester.description =
 unit.exogenesis-swarm.name = Swarm
 unit.exogenesis-swarm.description =
 unit.exogenesis-scourge.name = Scourge
 unit.exogenesis-scourge.description =
 unit.exogenesis-invasion.name = Invasion
 unit.exogenesis-invasion.description =
-unit.exogenesis-cronus.name = T7-SM Hephaestus
+unit.exogenesis-cronus.name = [#ff6363]T7-S.M Hephaestus[]
 unit.exogenesis-cronus.description = Swarm Mother
 unit.exogenesis-cronus.details =
 
@@ -300,6 +303,17 @@ block.exogenesis-phoss.name = Phoss
 block.exogenesis-phoss.description =
 
 ##Empyrean units
+unit.exogenesis-soul.name = Lux
+unit.exogenesis-soul.description =
+unit.exogenesis-pneuma.name = Glimmer
+unit.exogenesis-pneuma.description =
+unit.exogenesis-psyche.name = psyche
+unit.exogenesis-psyche.description =
+unit.exogenesis-myalo.name = myalo
+unit.exogenesis-myalo.description =
+unit.exogenesis-acheron.name = Radiance
+unit.exogenesis-acheron.description ==
+
 unit.exogenesis-lux.name = Lux
 unit.exogenesis-lux.description =
 unit.exogenesis-glimmer.name = Glimmer
@@ -310,6 +324,7 @@ unit.exogenesis-auric.name = Auric
 unit.exogenesis-auric.description =
 unit.exogenesis-radiance.name = Radiance
 unit.exogenesis-radiance.description ==
+
 unit.exogenesis-prayer.name = Prayer
 unit.exogenesis-prayer.description =
 unit.exogenesis-apprise.name = Apprise
