--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -115,12 +115,14 @@ item.exogenesis-eternionCore.description =
 item.exogenesis-radCore.name = Rad Core
 item.exogenesis-radCore.description =
 
+item.exogenesis-vanstarBasalt.name = Vanstar Basalt
+item.exogenesis-vanstarBasalt.description =
 item.exogenesis-lightningStone.name = lightning Stone
 item.exogenesis-lightningStone.description =
-item.exogenesis-urkaStone.name = Urka Stone
-item.exogenesis-urkaStone.description =
-item.exogenesis-viliotStone.name = Viliot Stone
-item.exogenesis-viliotStone.description =
+item.exogenesis-peridotite.name = Peridotite
+item.exogenesis-peridotite.description =
+item.exogenesis-ameythystGeode.name = Ameythyst Geode
+item.exogenesis-ameythystGeode.description =
 item.exogenesis-luxiteStone.name = Luxite Stone
 item.exogenesis-luxiteStone.description =
 item.exogenesis-vousarStone.name = Vousar Stone
