--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -85,7 +85,7 @@ unit.exogenesis-cronus.details =
 item.exogenesis-osmium.name = Osmium
 item.exogenesis-osmium.description = A dense and durable metal used in various structure construction
 item.exogenesis-gold.name = Gold
-item.exogenesis-gold.description =
+item.exogenesis-gold.description = A Soft metal that is an excellent conductor of heat and electricity. Resistant to corrosion.
 item.exogenesis-leadZinc.name = Lead Zinc
 item.exogenesis-leadZinc.description =
 item.exogenesis-uranimite.name = Uranimite
@@ -94,56 +94,56 @@ item.exogenesis-uranimite.description =
 item.exogenesis-lumeonEnergyCell.name = lumeon Energy Cell
 item.exogenesis-lumeonEnergyCell.description =
 item.exogenesis-vanstariumAlloy.name = Vanstarium Alloy
-item.exogenesis-vanstariumAlloy.description = A Highly energetic metal forge by the [#FFF861FF]Elecians []with powerful energy realising and absorption capabilities
-item.exogenesis-vanstariumAlloy.details = Forge merely a few years after the Titan fell onto the world of the Elecians.
+item.exogenesis-vanstariumAlloy.description = A Highly energetic alloy forge by the [#FFF861FF]empyrean []with powerful energy releasing and absorption capabilities
+
 
 item.exogenesis-vastanium.name = Vastanium
-item.exogenesis-vastanium.description =
+item.exogenesis-vastanium.description = An energy absorbent alloy used within the construction of high tier structures
 item.exogenesis-neodymium.name = Neodymium
-item.exogenesis-neodymium.description =
+item.exogenesis-neodymium.description = A rareVanstar metal used within the construction of electrical structures.
 
 item.exogenesis-chronophite.name = Chronophite
-item.exogenesis-chronophite.description = A Highly energetic metal forge by the [#FFF861FF]Elecians []with powerful energy realising and absorption capabilities
-item.exogenesis-thermoCore.name = Thermo Core
-item.exogenesis-thermoCore.description =
-item.exogenesis-negesiteCore.name = Negesite Core
-item.exogenesis-negesiteCore.description =
-item.exogenesis-positeCore.name = Posite Core
-item.exogenesis-positeCore.description =
-item.exogenesis-eternionCore.name = Eternion Core
-item.exogenesis-eternionCore.description =
-item.exogenesis-radCore.name = Rad Core
-item.exogenesis-radCore.description =
+item.exogenesis-chronophite.description = A rare Radioactive colorful crystal found on vanster which is primarily utilized within higher tier tech.
+item.exogenesis-thermo-core.name = Thermo Core
+item.exogenesis-thermo-core.description =
+item.exogenesis-negesite-core.name = Negesite Core
+item.exogenesis-negesite-coreCore.description =
+item.exogenesis-posite-core.name = Posite Core
+item.exogenesis-posite-core.description =
+item.exogenesis-eternion-core.name = Eternion Core
+item.exogenesis-eternion-core.description =
+item.exogenesis-rad-core.name = Rad Core
+item.exogenesis-rad-core.description =
 
-item.exogenesis-vanstarBasalt.name = Vanstar Basalt
-item.exogenesis-vanstarBasalt.description =
-item.exogenesis-lightningStone.name = lightning Stone
-item.exogenesis-lightningStone.description =
+item.exogenesis-vanstar-basalt.name = Vanstar Basalt
+item.exogenesis-vanstar-basalt.description = Common vanstar igneous rock, used to grind down and extracted minerals.
+item.exogenesis-lightning-stone.name = lightning Stone
+item.exogenesis-lightning-stone.description = A blue crystal with high conductive and electrical properties capable of conducting and producing large amount of electricity in the right conditions
 item.exogenesis-peridotite.name = Peridotite
-item.exogenesis-peridotite.description =
-item.exogenesis-ameythystGeode.name = Ameythyst Geode
-item.exogenesis-ameythystGeode.description =
-item.exogenesis-luxiteStone.name = Luxite Stone
-item.exogenesis-luxiteStone.description =
-item.exogenesis-vousarStone.name = Vousar Stone
-item.exogenesis-vousarStone.description =
-item.exogenesis-litusiumAlloy.name = Litusium Alloy
-item.exogenesis-litusiumAlloy.description =
-item.exogenesis-empyreanPlating.name = Empyrean plating
-item.exogenesis-empyreanPlating.description =
+item.exogenesis-peridotite.description = A dense, coarse-grained igneous rock consisting mostly of the silicate minerals, and commonly found within the mantle of Vanstar. primarily used in supportive structures and debuffing turrets.
+item.exogenesis-amethyst-geode.name = Amethyst Geode
+item.exogenesis-amethyst-geode.description = A common variant of quartz, and is common in the rocks of vanstar thanks to the constant rain the planet experiences
+item.exogenesis-luxite-stone.name = Luxite
+item.exogenesis-luxite-stone.description = A yellow crystal which displays luminescent properties. This crystal displays a far more intense form of triboluminescence.
+item.exogenesis-vousar-stone.name = Vousar
+item.exogenesis-vousar-stone.description = A pinkish crystal which display thermodynamic properties capable of generating large amounts of heat. Is commonly used within heat based weaponry and structures.
+item.exogenesis-litusium-alloy.name = Litusium Alloy
+item.exogenesis-litusium-alloy.description = A stronger iteration of the plating, which has the same function.
+item.exogenesis-empyrean-plating.name = Empyrean plating
+item.exogenesis-empyrean-plating.description = An armor plating used to bolster structures and armor structures. Is heavily used in unit construction.
 item.exogenesis-magnetite.name = Magnetite
-item.exogenesis-magnetite.description =
+item.exogenesis-magnetite.description = A mineral whose primary component is an iron oxide, it is ferromagnetic,and cna be utilized within electrical structures.
 item.exogenesis-iron.name = Iron
-item.exogenesis-iron.description =
+item.exogenesis-iron.description = an abundant and durable metal found across vanster. Used with a wide variety of structures.
 item.exogenesis-quartz.name = Quartz
-item.exogenesis-quartz.description =
+item.exogenesis-quartz.description = A hard mineral consisting of silica. Used within some tech and is required to make metaglass.
 item.exogenesis-cobolt.name = Cobolt
-item.exogenesis-cobolt.description =
+item.exogenesis-cobolt.description = A metal commonly found on Vanster. Used within a wide variety of structures.
 item.exogenesis-rustyCopper.name = Rusty Copper
-item.exogenesis-rustyCopper.description =
+item.exogenesis-rustyCopper.description = Copper that is oxidized. 
 item.exogenesis-oltuxium.name = Oltuxium
-item.exogenesis-oltuxium.description = An electrical metal that is commonly found on the gassy planet of the Elecians. Used in various Elecian tech aswell as electrical structures.
-item.exogenesis-oltuxium.details = Makes your none existing hair stand up.
+item.exogenesis-oltuxium.description = A conductive metal that is commonly found on the surface of Vanstar. Used in various Empyrean tech.
+item.exogenesis-oltuxium.details = Makes your none existent hair stand up.
 
 item.exogenesis-terminusEnergyCell.name = termion Energy Cell
 item.exogenesis-terminusEnergyCell.description = A crystal powerful to bring apon [#FF5845FF]annihilation[] anything. Contains an extremely volatile and powerful energy.
