--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -12,6 +12,22 @@ unit.exogenesis-.name =
 unit.exogenesis-.description =
 unit.exogenesis-.details =
 
+sector.exogenesis-StormFront.description = StormFront
+sector.exogenesis-StormFront.details =
+sector.exogenesis-canyon.description = Canyon
+sector.exogenesis-canyon.details =
+sector.exogenesis-ferricCrator.description = Ferric Crater
+sector.exogenesis-ferricCrator.details =
+sector.exogenesis-fortress.description = Fortress
+sector.exogenesis-fortress.details =
+sector.exogenesis-marbleHills.description = Marble Hills
+sector.exogenesis-marbleHills.details =
+sector.exogenesis-typhoon.description = Typhoon
+sector.exogenesis-typhoon.details =
+sector.exogenesis-castle.description = Castle
+sector.exogenesis-castle.details =
+
+
 ##Erekir units
 unit.exogenesis-prometheus.name = [#ffb98b]T1-R.F Prometheus[]
 unit.exogenesis-prometheus.description = The [#ffb98b]Rolling Fortress Titan[]. The [#ffb98b]T1-RF Prometheus[] is a heavy duty siege unit with thick armoring and high health. Sporting a quad barrel main cannon and  armed with four mounted artillery cannon.
@@ -58,7 +74,7 @@ unit.exogenesis-calm.name = Calm
 unit.exogenesis-calm.description = A small support unit. Fires a cluster of healing bullets, can repair nearby allies.
 unit.exogenesis-serene.name = Serene
 unit.exogenesis-serene.description = Fires three bullets cable of piercing and healing, at rapid pace, they also deal extra damage to structure. Heals nearby allies.
-unit.exogenesis-tranquil.name = Tranguil
+unit.exogenesis-tranquil.name = Tranquil
 unit.exogenesis-tranquil.description = Fires arcs at nearby enemies. wield a large cubic force fields capable of protecting multiple allies.
 unit.exogenesis-sanctuary.name = Sanctuary
 unit.exogenesis-sanctuary.description =  Fires three energy orbs in cone. Capable of buffing nearby allies and healing them.
