--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -1,4 +1,3 @@
-## incase you need to copy n paste
 block.exogenesis-.name =
 block.exogenesis-.description =
 block.exogenesis-.details =
@@ -156,7 +155,7 @@ item.exogenesis-quartz.description = A hard mineral consisting of silica. Used w
 item.exogenesis-cobolt.name = Cobolt
 item.exogenesis-cobolt.description = A metal commonly found on Vanster. Used within a wide variety of structures.
 item.exogenesis-rustyCopper.name = Rusty Copper
-item.exogenesis-rustyCopper.description = Copper that is oxidized. 
+item.exogenesis-rustyCopper.description = Copper that is oxidized.
 item.exogenesis-oltuxium.name = Oltuxium
 item.exogenesis-oltuxium.description = A conductive metal that is commonly found on the surface of Vanstar. Used in various Empyrean tech.
 item.exogenesis-oltuxium.details = Makes your none existent hair stand up.
@@ -291,6 +290,8 @@ block.exogenesis-bliss.name = Bliss
 block.exogenesis-bliss.description =
 block.exogenesis-gale.name = Gale
 block.exogenesis-gale.description =
+block.exogenesis-cleanser.name = Cleanser
+block.exogenesis-cleanser.description =
 ##3x3
 block.exogenesis-tanons.name = Tanons
 block.exogenesis-tanons.description =
@@ -298,6 +299,8 @@ block.exogenesis-glory.name = Glory
 block.exogenesis-glory.description =
 block.exogenesis-essence.name = Essence
 block.exogenesis-essence.description =
+block.exogenesis-sanctify.name = Sanctify
+block.exogenesis-sanctify.description =
 ##4x4
 block.exogenesis-excalibur.name = Excalibur
 block.exogenesis-excalibur.description =
@@ -307,9 +310,13 @@ block.exogenesis-eminence.name = Eminence
 block.exogenesis-eminence.description =
 block.exogenesis-aspect.name = Aspect
 block.exogenesis-aspect.description =
+block.exogenesis-blessing.name = Blessing
+block.exogenesis-blessing.description =
 ##5x5
 block.exogenesis-grandeur.name = Grandeur
 block.exogenesis-grandeur.description =
+block.exogenesis-sacrosanct.name = sacrosanct
+block.exogenesis-sacrosanct.description =
 block.exogenesis-aether.name = Aether
 block.exogenesis-aether.description =
 block.exogenesis-agios.name = Agios
@@ -319,6 +326,107 @@ block.exogenesis-arbiter.name = Arbiter
 block.exogenesis-arbiter.description =
 block.exogenesis-phoss.name = Phoss
 block.exogenesis-phoss.description =
+
+## General blocks
+block.exogenesis-ductEmpyrean.name = Empyrean duct
+block.exogenesis-ductEmpyrean.description =
+block.exogenesis-ductEmpyreanBridge.name = Empyrean Duct Bridge
+block.exogenesis-ductEmpyreanBridge.description =
+block.exogenesis-empyreanSorter.name = Empyrean Sorter
+block.exogenesis-empyreanSorter.description =
+block.exogenesis-empyreanJunction.name = Empyrean Junction
+block.exogenesis-empyreanJunction.description =
+block.exogenesis-empyreanRouter.name = Empyrean Router
+block.exogenesis-empyreanRouter.description =
+
+block.exogenesis-drainPipe.name = Drain Pipe
+block.exogenesis-drainPipe.description =
+block.exogenesis-drainPipeRouter.name = Drain Pipe Router
+block.exogenesis-drainPipeRouter.description =
+block.exogenesis-pulsePump.name = Pulse Pump
+block.exogenesis-pulsePump.description =
+block.exogenesis-pulseImpactPump.name = Pulse Impact Pump
+block.exogenesis-pulseImpactPump.description =
+block.exogenesis-liquidCup.name = Liquid Holder
+block.exogenesis-liquidCup.description =
+block.exogenesis-liquidTankEmpyrean.name = Empyrean Liquid Tank
+block.exogenesis-liquidTankEmpyrean.description =
+
+block.exogenesis-luxNode.name = Lux Node
+block.exogenesis-luxNode.description =
+block.exogenesis-luxTower.name = Lux Tower
+block.exogenesis-luxTower.description =
+block.exogenesis-oltuxiumBattery.name = Oltuxium Battery
+block.exogenesis-oltuxiumBattery.description =
+block.exogenesis-oltuxiumBatteryLarge.name = Large Oltuxium Battery
+block.exogenesis-oltuxiumBatteryLarge.description =
+block.exogenesis-energyExtractor.name = Energy Extractor
+block.exogenesis-energyExtractor.description =
+block.exogenesis-energyExtractorMedium.name = Medium Energy Extractor
+block.exogenesis-energyExtractorMedium.description =
+
+block.exogenesis-pulsarDrill.name = Pulsar Drill
+block.exogenesis-pulsarDrill.description =
+block.exogenesis-pulseImpactDrill.name = Pulse Impact Drill
+block.exogenesis-pulseImpactDrill.description =
+block.exogenesis-quaryDrill.name = Quarry Drill
+block.exogenesis-quaryDrill.description =
+block.exogenesis-pulsarWallDrill.name = Pulsar Wall Drill
+block.exogenesis-pulsarWallDrill.description =
+block.exogenesis-smallWallGrinder.name = Small Wall Grinder
+block.exogenesis-smallWallGrinder.description =
+block.exogenesis-wallGrinder.name = Large Wall Grinder
+block.exogenesis-wallGrinder.description =
+
+block.exogenesis-platingFactory.name = Plating Factory
+block.exogenesis-platingFactory.description =
+block.exogenesis-sandSift.name = Sand Sift
+block.exogenesis-sandSift.description =
+block.exogenesis-rockGrinder.name = Rock Grinder
+block.exogenesis-rockGrinder.description =
+block.exogenesis-ironFurnace.name = Iron Furnace
+block.exogenesis-ironFurnace.description =
+block.exogenesis-alloyForge.name = Silic Forge
+block.exogenesis-alloyForge.description =
+block.exogenesis-metaglassForger.name = Metaglass Forger
+block.exogenesis-metaglassForger.description =
+block.exogenesis-listusiumForge.name = Listusium Forge
+block.exogenesis-listusiumForge.description =
+block.exogenesis-vanstaniumOven.name = Vanstanium Oven
+block.exogenesis-vanstaniumOven.description =
+block.exogenesis-osmiumBlastForge.name = Osmium Blast Forge
+block.exogenesis-osmiumBlastForge.description =
+
+block.exogenesis-coboltWall.name = Cobolt Wall
+block.exogenesis-coboltWall.description =
+block.exogenesis-largeCoboltWall.name = large Cobolt Wall
+block.exogenesis-largeCoboltWall.description =
+block.exogenesis-oltuxiumWall.name = Oltuxium Wall
+block.exogenesis-oltuxiumWall.description =
+block.exogenesis-largeOltuxiumWall.name = Large Oltuxium Wall
+block.exogenesis-largeOltuxiumWall.description =
+block.exogenesis-ironWall.name = Iron Wall
+block.exogenesis-ironWall.description =
+block.exogenesis-largeIronWall.name = Large Iron Wall
+block.exogenesis-largeIronWall.description =
+block.exogenesis-listusiumWall.name = Listusium Wall
+block.exogenesis-listusiumWall.description =
+block.exogenesis-largeListusiumWall.name = largeListusiumWall
+block.exogenesis-largeListusiumWall.description = largeListusiumWall
+
+block.exogenesis-empyreanFactory.name = Empyrean Factory
+block.exogenesis-empyreanFactory.description =
+
+block.exogenesis-medicusProjector.name = Medicus Projector
+block.exogenesis-medicusProjector.description =
+
+block.exogenesis-coreBelief.name = Core: Belief
+block.exogenesis-coreBelief.description =
+block.exogenesis-coreHope.name = core: Hope
+block.exogenesis-coreHope.description =
+block.exogenesis-coreReliance.name = Core: Reliance
+block.exogenesis-coreReliance.description =
+
 
 ##Empyrean units
 unit.exogenesis-soul.name = Lux
