--- a/gradle.properties
+++ b/gradle.properties
@@ -24,7 +24,7 @@ mindustryBE = true
 mindustryVersion = v147
 # Mindustry *bleeding-edge* version, corresponds to commit hashes of Anuken/MindustryJitpack, e.g. `345ea0d54de0aee6953a664468556f4fea1a7c4f`.
 # Leave empty if `mindustryBE = false`.
-mindustryBEVersion = 147
+mindustryBEVersion = v147
 # Arc version, should either follow `mindustryVersion` for release or whatever hash bleeding-edge Mindustry uses.
 arcVersion = v147
 # My black holes library. Just use the latest release.
