--- a/gradle.properties
+++ b/gradle.properties
@@ -18,13 +18,13 @@ modArtifact = ExogenesisMod
 entVersion = v146.0.10
 # Set to `true` if the mod is compiled against Mindustry bleeding-edge build.
 # See documents on `mindustryVersion` and `mindustryBEVersion`.
-mindustryBE = true
+mindustryBE = false
 # Mindustry *release* version, e.g. `v145` or `v146`.
 # Leave empty if `mindustryBE = true`.
 mindustryVersion = v147
 # Mindustry *bleeding-edge* version, corresponds to commit hashes of Anuken/MindustryJitpack, e.g. `345ea0d54de0aee6953a664468556f4fea1a7c4f`.
 # Leave empty if `mindustryBE = false`.
-mindustryBEVersion = v147
+mindustryBEVersion =
 # Arc version, should either follow `mindustryVersion` for release or whatever hash bleeding-edge Mindustry uses.
 arcVersion = v147
 # My black holes library. Just use the latest release.
