--- a/gradle.properties
+++ b/gradle.properties
@@ -18,7 +18,7 @@ modArtifact = ExogenesisMod
 entVersion = v146.0.10
 # Set to `true` if the mod is compiled against Mindustry bleeding-edge build.
 # See documents on `mindustryVersion` and `mindustryBEVersion`.
-mindustryBE = false
+mindustryBE = true
 # Mindustry *release* version, e.g. `v145` or `v146`.
 # Leave empty if `mindustryBE = true`.
 mindustryVersion = v147
