--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -27,6 +27,70 @@ sector.exogenesis-castle.description = Castle
 sector.exogenesis-castle.details =
 
 
+##Sepurlo units
+unit.exogenesis-paroxysm.name = Paroxysm
+unit.exogenesis-paroxysm.description =
+unit.exogenesis-avicularia.name = Avicularia
+unit.exogenesis-avicularia.description =
+unit.exogenesis-avicularia.details =
+unit.exogenesis-vidar.name = [#bf92f9]Vidar[]
+unit.exogenesis-vidar.description = The Heavy Assault Titan
+unit.exogenesis-vidar.details =
+
+unit.exogenesis-selenelion.name = Selenelion
+unit.exogenesis-selenelion.description =
+unit.exogenesis-twilight.name = Twilight
+unit.exogenesis-twilight.description =
+unit.exogenesis-twilight.details =
+unit.exogenesis-odin.name = [#ffb98b]Odin[]
+unit.exogenesis-odin.description = The Nuclear-arms Titan
+unit.exogenesis-odin.details =
+
+unit.exogenesis-siren.name = Siren
+unit.exogenesis-siren.description =
+unit.exogenesis-orca.name = Orca
+unit.exogenesis-orca.description =
+unit.exogenesis-orca.details =
+unit.exogenesis-njord.name = [#ffb98b]Njord[]
+unit.exogenesis-njord.description = The Battleship Titan
+unit.exogenesis-njord.details =
+
+unit.exogenesis-halberd.name = Halberd
+unit.exogenesis-halberd.description =
+unit.exogenesis-empire.name = Empire
+unit.exogenesis-empire.description =
+unit.exogenesis-empire.details =
+unit.exogenesis-heimdall.name = [#ffb98b]Heimdall[]
+unit.exogenesis-heimdall.description = The brawler Titan
+unit.exogenesis-heimdall.details =
+
+unit.exogenesis-triton.name = Triton
+unit.exogenesis-triton.description =
+unit.exogenesis-notodoris.name = Notodoris
+unit.exogenesis-notodoris.description =
+unit.exogenesis-notodoris.details =
+unit.exogenesis-thor.name = [#ffb98b]thor[]
+unit.exogenesis-thor.description = The carrier Titan
+unit.exogenesis-thor.details =
+
+unit.exogenesis-neutron.name = Neutron
+unit.exogenesis-neutron.description =
+unit.exogenesis-ursa.name = Ursa
+unit.exogenesis-ursa.description =
+unit.exogenesis-ursa.details =
+unit.exogenesis-ullr.name = [#ffb98b]Ullr[]
+unit.exogenesis-ullr.description = The superlaser Titan
+unit.exogenesis-ullr.details =
+
+unit.exogenesis-guardian.name = Guardian
+unit.exogenesis-guardian.description =
+unit.exogenesis-pantagruel.name = Pantagruel
+unit.exogenesis-pantagruel.description =
+unit.exogenesis-pantagruel.details =
+unit.exogenesis-helios.name = [#ffb98b]Sol[]
+unit.exogenesis-helios.description = The Orbital Laser Titan
+unit.exogenesis-helios.details =
+
 ##Erekir units
 unit.exogenesis-prometheus.name = [#ffb98b]T1-R.F Prometheus[]
 unit.exogenesis-prometheus.description = The [#ffb98b]Rolling Fortress Titan[]. The [#ffb98b]T1-RF Prometheus[] is a heavy duty siege unit with thick armoring and high health. Sporting a quad barrel main cannon and  armed with four mounted artillery cannon.
