--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -69,7 +69,7 @@ unit.exogenesis-triton.description =
 unit.exogenesis-notodoris.name = Notodoris
 unit.exogenesis-notodoris.description =
 unit.exogenesis-notodoris.details =
-unit.exogenesis-thor.name = [#ffb98b]thor[]
+unit.exogenesis-thor.name = [#98ffa9]thor[]
 unit.exogenesis-thor.description = The carrier Titan
 unit.exogenesis-thor.details =
 
@@ -78,7 +78,7 @@ unit.exogenesis-neutron.description =
 unit.exogenesis-ursa.name = Ursa
 unit.exogenesis-ursa.description =
 unit.exogenesis-ursa.details =
-unit.exogenesis-ullr.name = [#ffb98b]Ullr[]
+unit.exogenesis-ullr.name = [#98ffa9]Ullr[]
 unit.exogenesis-ullr.description = The superlaser Titan
 unit.exogenesis-ullr.details =
 
@@ -87,7 +87,7 @@ unit.exogenesis-guardian.description =
 unit.exogenesis-pantagruel.name = Pantagruel
 unit.exogenesis-pantagruel.description =
 unit.exogenesis-pantagruel.details =
-unit.exogenesis-helios.name = [#ffb98b]Sol[]
+unit.exogenesis-helios.name = [#98ffa9]Sol[]
 unit.exogenesis-helios.description = The Orbital Laser Titan
 unit.exogenesis-helios.details =
 
