--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -541,6 +541,14 @@ status.exogenesis-leto-buff.description = 1
 status.exogenesis-rhea-buff.name = Rhea Buff
 status.exogenesis-rhea-buff.description = 1
 ##damage types
+exo.kinetic-damage = [accent]{0}[#ffb98b] Kinetic Damage[]
+exo.energy-damage = [accent]{0}[#3449ff] Energy Damage[]
+exo.quantum-damage = [accent]{0}[#6c50ef] Quantum Damage[]
+exo.thermal-damage = [accent]{0}[#ff231b] Thermal Damage[]
+exo.cryonic-damage = [accent]{0}[#65b4e6] Cryonic Damage[]
+exo.pierce-damage = [accent]{0}[#e0e0e0] Pierce Damage[]]
+exo.explosive-damage = [accent]{0}[#ff793a] Explosive Damage[]
+
 stat.typedamage = Damage from types
 damage.kinetic = Kinetic
 damage.energy = Energy
