--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -542,12 +542,20 @@ status.exogenesis-rhea-buff.name = Rhea Buff
 status.exogenesis-rhea-buff.description = 1
 ##damage types
 exo.kinetic-damage = [accent]{0}[#ffb98b] Kinetic Damage[]
-exo.energy-damage = [accent]{0}[#3449ff] Energy Damage[]
+exo.energy-damage = [accent]{0}[#3b6cff] Energy Damage[]
 exo.quantum-damage = [accent]{0}[#6c50ef] Quantum Damage[]
 exo.thermal-damage = [accent]{0}[#ff231b] Thermal Damage[]
 exo.cryonic-damage = [accent]{0}[#65b4e6] Cryonic Damage[]
 exo.pierce-damage = [accent]{0}[#e0e0e0] Pierce Damage[]]
 exo.explosive-damage = [accent]{0}[#ff793a] Explosive Damage[]
+
+exo.bar.speed-up = Speed Up: +{0}%
+exo.bar.overheat = Overheat: {0}%
+exo.bar.speed-boost = Speed Boost: {0}%
+stat.increase-when-shooting = Acceleration
+stat.decrease-not-shooting = Deceleration
+stat.fire-rate-max = Max Fire Rate
+stat.overheat-cooldown = Overheat Cooldown
 
 stat.typedamage = Damage from types
 damage.kinetic = Kinetic
