Damage Type Display and Stats

--- a/assets/bundles/bundle.properties
+++ b/assets/bundles/bundle.properties
@@ -26,7 +26,6 @@ sector.exogenesis-typhoon.details =
 sector.exogenesis-castle.description = Castle
 sector.exogenesis-castle.details =
 
-
 ##Sepurlo units
 unit.exogenesis-paroxysm.name = Paroxysm
 unit.exogenesis-paroxysm.description =
@@ -540,14 +539,6 @@ status.exogenesis-leto-buff.name = Leto Buff
 status.exogenesis-leto-buff.description = 1
 status.exogenesis-rhea-buff.name = Rhea Buff
 status.exogenesis-rhea-buff.description = 1
-##damage types
-exo.kinetic-damage = [accent]{0}[#ffb98b] Kinetic Damage[]
-exo.energy-damage = [accent]{0}[#3b6cff] Energy Damage[]
-exo.quantum-damage = [accent]{0}[#6c50ef] Quantum Damage[]
-exo.thermal-damage = [accent]{0}[#ff231b] Thermal Damage[]
-exo.cryonic-damage = [accent]{0}[#65b4e6] Cryonic Damage[]
-exo.pierce-damage = [accent]{0}[#e0e0e0] Pierce Damage[]]
-exo.explosive-damage = [accent]{0}[#ff793a] Explosive Damage[]
 
 exo.bar.speed-up = Speed Up: +{0}%
 exo.bar.overheat = Overheat: {0}%
@@ -556,15 +547,30 @@ stat.increase-when-shooting = Acceleration
 stat.decrease-not-shooting = Deceleration
 stat.fire-rate-max = Max Fire Rate
 stat.overheat-cooldown = Overheat Cooldown
+stat.resistance = Resistance List
 
-stat.typedamage = Damage from types
-damage.kinetic = Kinetic
-damage.energy = Energy
-damage.thermal = Thermal
-damage.cryogenic = Cryogenic
-damage.explosive = Explosive
-damage.pierce = Pierce
-damage.radiation = Radiation
+content.effect_UNUSED.name = Damage Type
+damage.kinetic.name = Kinetic
+damage.kinetic.description = Use kinetic collision to deal significant damage to enemies.
+#damage.kinetic.details =
+damage.explosive.name = Explosive
+damage.explosive.description = Targeted blasting. Very effective against most enemies.
+#damage.explosive.details =
+damage.pierce.name = Pierce
+damage.pierce.description = Sharpened attack, Shattering enemy armor and causing damage.
+#damage.pierce.details =
+damage.energy.name = Energy
+damage.energy.description = The form of pure energy. Effective against certain enemies.
+#damage.energy.details =
+damage.thermal.name = Thermal
+damage.thermal.description = Pure heat that molten enemies which are weak against heat.
+#damage.thermal.details =
+damage.cryogenic.name = Cryogenic
+damage.cryogenic.description = Freezing attack inflict damage to enemies with low temperature.
+#damage.cryogenic.details =
+damage.radiation.name = Radiation
+damage.radiation.description = High Radiation to damage enemies with vicious way.
+#damage.radiation.details =
 
 planet.exogenesis-zetaTitanus.name = Zeta Titanus
 planet.exogenesis-zetaTitanus.description = sector.
@@ -576,3 +582,6 @@ planet.exogenesis-vanstar.name = Vanstar
 planet.exogenesis-vanstar.description = sector.
 planet.exogenesis-axin.name = Axin
 planet.exogenesis-axin.description = sector.
+
+exo.damage-resistance = [red]{0}% Resistance[]
+exo.damage-weakness = [accent]{0}% Weakness[]
